--- a/myProject-security/pom.xml
+++ b/myProject-security/pom.xml
@@ -10,6 +10,33 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>myProject-security</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0.0</version>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>com.pocket.cater</groupId>
+            <artifactId>pocket-cater-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <!--<version>3.1.0</version>-->
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
