--- a/myProject-web/pom.xml
+++ b/myProject-web/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>myProject-web</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0.0</version>
 
 
 </project>
