--- a/myProject-web/pom.xml
+++ b/myProject-web/pom.xml
@@ -14,4 +14,28 @@
     <version>1.0.0</version>
 
 
+    <dependencies>
+            <dependency>
+                <groupId>cn.elyar</groupId>
+                <artifactId>myProject-common</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.elyar</groupId>
+                <artifactId>myProject-dao</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 </project>
