--- a/myProject-security/pom.xml
+++ b/myProject-security/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>spring-webmvc</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
